change the jump fix to be solved by always showing the vertical scroll bar on devices with physical mouse attached

--- a/blueocean-dashboard/src/main/less/core.less
+++ b/blueocean-dashboard/src/main/less/core.less
@@ -1,6 +1,5 @@
 html {
-    width: 100vw;
-    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 #modal-snap-background {
